objects/InterPlan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT( Implementation_Tracking_ID__r.Account_Legal_Name__r.Account_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Underwriter__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.Underwriter__r.FirstName + &apos; &apos;+Implementation_Tracking_ID__r.Account_Legal_Name__r.Underwriter__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Team Underwriter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alphanumeric_Prefix_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alphanumeric Prefix Request</label>
        <referenceTo>Alpha_Prefix_Request__c</referenceTo>
        <relationshipLabel>InterPlans</relationshipLabel>
        <relationshipName>InterPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Account.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_or_Declined_Time__c</fullName>
        <description>Intermediate Field For Approval Or Declined Date</description>
        <formula>CASE(MOD( Interplan_Check_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Approved_or_Declined_Date__c - Interplan_Check_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Approved_or_Declined_Date__c - Interplan_Check_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Approved_or_Declined_Date__c - Interplan_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Approved_or_Declined_Date__c - Interplan_Check_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Approved_or_Declined_Date__c - Interplan_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Approved_or_Declined_Date__c - Interplan_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Approved_or_Declined_Date__c - Interplan_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Approved_or_Declined_Date__c - Interplan_Check_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval or Declined Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_or_Declined_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved or Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Branding__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.Branding__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cede_Information_Cede_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cede Information Cede End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cede_Information_Cede_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cede Information Cede Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Control_Plan_Code__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.Control_Plan_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Control Plan Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SME_Queue_time__c</fullName>
        <formula>IF( 
ISBLANK(In_Progress_Date_Completed__c),Now() - Not_Started_Date_Completed__c, 
(In_Progress_Date_Completed__c - Not_Started_Date_Completed__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME Queue time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Sales_Account_Management__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.DirectorSalesAccountManagement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director Sales/ Account Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Employees__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.Eligible_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_info__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Opportunity.Stage_Reason__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.CMDFundingType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <formula>TEXT( Implementation_Tracking_ID__r.Account_Legal_Name__r.HQ_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>InterPlan</relationshipLabel>
        <relationshipName>InterPlan</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interplan_Check_Date__c</fullName>
        <description>Captures Date When The Interplan Check Field Is True</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures Date When The Interplan Check Field Is True</inlineHelpText>
        <label>Interplan Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interplan_Check__c</fullName>
        <description>US16784</description>
        <formula>Implementation_Tracking_ID__r.SBC_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interplan_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF(Owner:User.Id == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pending_Correction_Record_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is True If Pending Correction Record Present, Else False.</description>
        <label>Is Pending Correction Record Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.JAA_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment_MBU__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.vlocity_ins__MarketSegment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment (MBU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Not_Started_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Not Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Interplan_Date__c</fullName>
        <description>Original Interplan Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interplan Original Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</description>
        <formula>IF(Owner:User.LastName!=null, Owner:User.FirstName + &apos; &apos; + Owner:User.LastName, Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_Interplan__c== False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Pending Correction from WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Approved_Declined__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Approved/Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Not_Started__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Corrections_Stage__c</fullName>
        <description>This field fetches the associated Pending Correction&apos;s Stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Time__c</fullName>
        <description>Intermediate Pending Correction Date field</description>
        <formula>CASE(MOD( Interplan_Check_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_Date__c -  Interplan_Check_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_Date__c -  Interplan_Check_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_Date__c -  Interplan_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_Date__c -  Interplan_Check_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_Date__c -  Interplan_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_Date__c -  Interplan_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_Date__c -  Interplan_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Pending_Correction_Date__c -  Interplan_Check_Date__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Products_on_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products on Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>InterPlans</relationshipLabel>
        <relationshipName>InterPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.Renewal_Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Relationships__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider Relationships</label>
        <referenceTo>ServiceProviderRelationship__c</referenceTo>
        <relationshipLabel>InterPlans</relationshipLabel>
        <relationshipName>InterPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>TEXT( Implementation_Tracking_ID__r.Account_Legal_Name__r.Situs_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01A Assign to UW</fullName>
                </value>
                <value>
                    <fullName>01AA Submitted To CIC</fullName>
                </value>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sutter_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sutter Status</label>
        <referenceTo>Sutter_Status__c</referenceTo>
        <relationshipLabel>InterPlans</relationshipLabel>
        <relationshipName>InterPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_Support_Interplan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support Interplan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_To_Approve_Deny__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Interplan Pending Correction Time</description>
        <label>Time To Approve/Deny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Pend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Interplan Pending Correction Time</description>
        <label>Time To Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_SME_Dept__c</fullName>
        <description>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</description>
        <formula>IF( Pending_Correction_Date__c &lt;&gt; Approved_or_Declined_Date__c, (Time_To_Approve_Deny__c + Time_To_Pend__c ), Time_To_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</inlineHelpText>
        <label>Time in SME Dept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;.</description>
        <formula>IF( 
ISNULL(Pending_Correction_to_Approved_Declined__c), 0 ,

CASE(MOD( Original_Interplan_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Interplan_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Interplan_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Interplan_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Interplan_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Interplan_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Interplan_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Interplan_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Pending_Correction_to_Approved_Declined__c -  Original_Interplan_Date__c)/7)*5)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;.</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriting_Work_Month__c</fullName>
        <label>Underwriting Work Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sept</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warp_Medical_Members__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Legal_Name__r.WARP_Medical_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warp Medical Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>InterPlan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Interplan_Key_Account</fullName>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <label>All Interplan - Key Account</label>
    </listViews>
    <listViews>
        <fullName>Interplan_Local_InterPlan</fullName>
        <filterScope>Queue</filterScope>
        <label>Interplan - Local</label>
        <queue>Interplan_Local</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Local_Assigned_Interplan</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01A Assign to UW,01AA Submitted To CIC,02 Work In Progress</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>03 Pending Correction,03 Pending Correction Returned</value>
        </filters>
        <label>Local – Assigned Interplan</label>
    </listViews>
    <listViews>
        <fullName>Local_Unassigned_Interplan_CA</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>California</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <label>Local Unassigned Interplan CA</label>
        <queue>Interplan_Local</queue>
    </listViews>
    <listViews>
        <fullName>Local_Unassigned_Interplan_CO</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Colorado</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <label>Local Unassigned Interplan CO</label>
        <queue>Interplan_Local</queue>
    </listViews>
    <listViews>
        <fullName>Local_Unassigned_Interplan_CT</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Connecticut</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <label>Local Unassigned Interplan CT</label>
        <queue>Interplan_Local</queue>
    </listViews>
    <listViews>
        <fullName>Local_Unassigned_Interplan_GA</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Georgia</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <label>Local Unassigned Interplan GA</label>
        <queue>Interplan_Local</queue>
    </listViews>
    <listViews>
        <fullName>Local_Unassigned_Interplan_IN</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Case_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Owner__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Indiana</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <label>Local Unassigned Interplan IN</label>
        <queue>Interplan_Local</queue>
    </listViews>
</CustomObject>